# Yolov8n_obb_openvino_cpp

./: CMakeLists.txt  README.md  readme.md  yolov8n_obb_test.cpp
